# src/modules/crop/dto/update-crop.dto.ts
@@ -1,0 +1,6 @@
+import { PartialType } from '@nestjs/swagger';
+import { CreateCropDto } from './create-crop.dto';
+
+export class UpdateCropDto extends PartialType(CreateCropDto) {
+    
+}
